[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/dialog/DialogTextLabel.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/dialog/Dialog.gd" type="Script" id=2]
[ext_resource path="res://assets/dialog/textfx/jump_pulse.gd" type="Script" id=3]
[ext_resource path="res://assets/Theme.tres" type="Theme" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.486275, 0.486275, 0.486275, 1 )

[sub_resource type="RichTextEffect" id=3]
script = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.486275, 0.486275, 0.486275, 1 )

[node name="Dialog" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 4 )
script = ExtResource( 2 )

[node name="DialogActor1" type="Panel" parent="."]
margin_right = 1024.0
margin_bottom = 100.0
custom_styles/panel = SubResource( 1 )

[node name="Actor1" type="TextureRect" parent="DialogActor1"]
margin_right = 100.0
margin_bottom = 100.0
expand = true

[node name="DialogText" parent="DialogActor1" instance=ExtResource( 1 )]
margin_right = 1024.0
scroll_active = false

[node name="ActorLabel1" type="RichTextLabel" parent="DialogActor1"]
margin_top = 70.0
margin_right = 100.0
margin_bottom = 100.0
bbcode_enabled = true
bbcode_text = "
[center][jump_pulse]Actor 1[/jump_pulse][/center]"
text = "
Actor 1"
scroll_active = false
scroll_following = true
custom_effects = [ SubResource( 3 ) ]

[node name="DialogActor2" type="Panel" parent="."]
margin_top = 500.0
margin_right = 1024.0
margin_bottom = 600.0
custom_styles/panel = SubResource( 2 )

[node name="Actor2" type="TextureRect" parent="DialogActor2"]
margin_right = 100.0
margin_bottom = 100.0
expand = true

[node name="DialogText" parent="DialogActor2" instance=ExtResource( 1 )]
margin_right = 1024.0
scroll_active = false

[node name="ActorLabel2" type="RichTextLabel" parent="DialogActor2"]
margin_top = 70.0
margin_right = 100.0
margin_bottom = 100.0
bbcode_enabled = true
bbcode_text = "
[center][jump_pulse]Actor 1[/jump_pulse][/center]"
text = "
Actor 1"
scroll_active = false
scroll_following = true
custom_effects = [ SubResource( 3 ) ]

[node name="Tween" type="Tween" parent="."]
